# trio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
assistants/nami/: nami_config.json  nami_main.py
assistants/rush/: rush_config.json  rush_main.py
assistants/vex/: vex_config.json  vex_main.py
core/: checkpoint_manager.py  controller.py  memory_manager.py  state_manager.py  vector_store.py
dashboard/: app.py  dashboard_config.json
dashboard/templates/: index.html
launchd/: com.user.trio.dashboard.plist  com.user.trio.nami.plist  com.user.trio.rush.plist  com.user.trio.vex.plist
scripts/: install.sh
