[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trio-ai-ecosystem"
version = "2.0.0"
description = "Trio Project - Your Personal AI Ecosystem on Mac Mini M4"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Trio Developer", email = "dev@trio.local"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.6.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "psutil>=6.0.0",
    "opencv-python>=4.10.0",
    "scenedetect>=0.6.5",
    "watchdog>=4.0.0",
    "pydub>=0.25.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "requests>=2.32.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
trio-nami = "assistants.nami.nami_main:main"
trio-rush = "assistants.rush.rush_main:main"
trio-vex = "assistants.vex.vex_main:main"
trio-dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "assistants*", "dashboard*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
